--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
+
+       /* Стили для кнопок и изображений */
+       #button-container {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        z-index: 999;
+        background: url('https://example.com/button-container-image.png') center center no-repeat;
+        background-size: contain; /* изменено на contain */
+        background-color: rgba(255, 255, 255, 0.8); /* добавлен белый фон с прозрачностью */
+        padding: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px; /* Расстояние между кнопками */
+      }
+
+      #button-container button img {
+        max-width: 100%;
+        max-height: 100%;
+        margin-right: 10px; /* Отступ справа от изображения */
+      }
+      
       /* Стили для кнопок и изображений */
       #button-container {
         position: absolute;
@@ -24,14 +48,15 @@
         align-items: center;
         justify-content: center;
         padding: 10px; /* Уменьшенный размер кнопок */
-        max-width: 150px; /* Максимальная ширина кнопок */
-        height: 100%; /* Заполнение высоты ячейки в плитке */
+        width: 200px; /* Ширина кнопок */
+        height: 40px; /* Высота кнопок */
       }
 
       #button-container button img {
         max-width: 100%;
         max-height: 100%;
-        margin-bottom: 10px; /* Отступ между изображением и текстом */
+        margin-right: 10px; /* Отступ справа от изображения */
+        order: -1; /* Изображение будет расположено перед текстом */
       }
       
     </style>
@@ -41,10 +66,10 @@
   </head>
   <body>
     <!-- Блок с кнопками и изображением -->
-    <div id="button-container" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 999; background: url('https://example.com/button-container-image.png') center center no-repeat; background-size: cover; padding: 20px;">
+    <div id="button-container" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 999; background: url('src/pictures/background.jpg') center center no-repeat; background-size: cover; padding: 20px;">
       <!-- Кнопка с изображением слева -->
       <button id="englishButton" onclick="playAudio('english')">
-        <img src="src/pictures/UK_flag.png" alt="English">
+        <img src="src/pictures/UK_flag.png"  alt="English">
         English
       </button>
 
