--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <div id="button-container" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 999; background: url('src/pictures/background.jpg') center center no-repeat; background-size: cover; padding: 20px;">
       <!-- Кнопка с изображением слева -->
       <button id="englishButton" onclick="playAudio('english')">
-        <img src="src/pictures/UK_flag.png" alt="English">
+        <img src="source/pictures/UK_flag.png" alt="English">
         English
       </button>
       
       <button id="russianButton" onclick="playAudio('russian')">
-        <img src="src/pictures/russian_flag.jpg" alt="Русский">
+        <img src="source/pictures/russian_flag.jpg" alt="Русский">
         Русский
       </button>
     </div>
@@ -98,10 +98,10 @@
         </video>
         <!-- Аудио-ресурсы для разных языков -->
         <audio id="english" loop>
-          <source src="src/sounds/ENGLISH/1.mp3" type="audio/mp3">
+          <source src="source/sounds/ENGLISH/1.mp3" type="audio/mp3">
         </audio>
         <audio id="russian" loop>
-          <source src="src/sounds/RUSSIAN/1.mp3" type="audio/mp3">
+          <source src="source/sounds/RUSSIAN/1.mp3" type="audio/mp3">
         </audio>
       </a-assets>
 
