--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
     <script>
       document.getElementById('englishButton').addEventListener('click', function() {
   console.log('English button clicked');
-  selectLanguage('english');
+  playAudio('english');
 });
 
 document.getElementById('russianButton').addEventListener('click', function() {
   console.log('Russian button clicked');
-  selectLanguage('russian');
+  playAudio('russian');
 });
 // Объект для хранения текущего воспроизводимого аудио
 const currentAudio = {
