--- a/index.html
+++ b/index.html
@@ -118,12 +118,10 @@
     <!-- Скрипт для обработки выбора языка и воспроизведения аудио -->
     <script>
       document.getElementById('englishButton').addEventListener('click', function() {
-  console.log('English button clicked');
   playAudio('english');
 });
 
 document.getElementById('russianButton').addEventListener('click', function() {
-  console.log('Russian button clicked');
   playAudio('russian');
 });
 // Объект для хранения текущего воспроизводимого аудио
@@ -134,17 +132,18 @@ const currentAudio = {
   audio4: null,
 };
 
+let currentLanguage = null;
+
 function playAudio(language) {
-  console.log("playing")
   // Останавливаем текущее воспроизведение аудио, если оно есть
-  if (currentAudio[language]) {
-    currentAudio[language].pause();
-    currentAudio[language].currentTime = 0;
+  if (currentAudio[currentLanguage]) {
+    currentAudio[currentLanguage].pause();
+    currentAudio[currentLanguage].currentTime = 0;
   }
 
   // Воспроизводим новое аудио, если оно не находится в состоянии воспроизведения
   if (currentAudio[language] && currentAudio[language].paused) {
-    
+    currentLanguage = language;
     currentAudio[language].play().catch(error => {
       // Обработка ошибки воспроизведения (например, ввод юзера)
       console.error('Error playing audio:', error);
