--- a/index.html
+++ b/index.html
@@ -90,17 +90,13 @@
     </button>
   </div>
 
-  <a-scene mindar-image="imageTargetSrc: /source/marker/lachta.mind;" 
+  <a-scene mindar-image="imageTargetSrc: ./source/marker/lachta.mind;" 
   color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" 
   device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="card"
-        src="/source/pictures/lachta.tif" />
-      <a-asset-item id="avatarModel"
-        src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
       <video id="lachta" autoplay loop muted crossorigin="anonymous"
-        src="/source/video/lachta.mp4">
+        src="./source/video/lachta.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
