--- a/index.html
+++ b/index.html
@@ -1,57 +1,40 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./source/style.css">
-  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  <script src="https://cdn.rawgit.com/cozmo/jsQR/master/dist/jsQR.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navigation Page</title>
 </head>
-
 <body>
-  <!-- Блок с кнопками и изображением -->
-  <div id="button-container"
-    style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); text-align: center; z-index: 999; background: url('src/pictures/background.jpg') center center no-repeat; background-size: cover; padding: 20px;">
-    <!-- Кнопка с изображением слева -->
-    <button id="englishButton" onclick="playAudio('english')">
-      <img src="source/pictures/UK_flag.png" alt="English">
-      English
-    </button>
-
-    <button id="russianButton" onclick="playAudio('russian')">
-      <img src="source/pictures/russian_flag.jpg" alt="Русский">
-      Русский
-    </button>
-  </div>
-
-  <a-scene mindar-image="imageTargetSrc: ./source/marker/lachta.mind;" color-space="sRGB"
-    renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false">
-
-    <a-assets>
-      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="./source/video/lachta.mp4">
-      </video>
-      <!-- Аудио-ресурсы для разных языков -->
-      <audio id="englishAudio" loop>
-        <source src="./source/sounds/ENGLISH/1.mp3" type="audio/mp3">
-      </audio>
-      <audio id="russianAudio" loop>
-        <source src="./source/sounds/RUSSIAN/1.mp3" type="audio/mp3">
-      </audio>
-    </a-assets>
-
-    <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse;"></a-camera>
-
-    <a-entity mindar-image-target="targetIndex: 0">
-      <a-video src="#lachta" width="1" height="0.75"></a-video>
-    </a-entity>
-
-    <!-- Добавлены компоненты raycaster и cursor -->
-    <a-entity cursor="rayOrigin: mouse;" raycaster=""></a-entity>
-  </a-scene>
-
-  <!-- Скрипт для обработки выбора языка и воспроизведения аудио -->
-  <script src="./source/scriptAudio.js"></script>
+    <ul>
+        <li><a href="/source/pages/lachta.html">Lachta</a></li>
+        <li><a href="/source/pages/altai.html">Altai</a></li>
+        <li><a href="/source/pages/tavrida.html">Tavrida</a></li>
+        <li><a href="/source/pages/arkhyz.html">Arkhyz</a></li>
+        <li><a href="/source/pages/ballet.html">Ballet</a></li>
+        <li><a href="/source/pages/innopolis.html">Innopolis</a></li>
+        <li><a href="/source/pages/mosque.html">Mosque</a></li>
+        <li><a href="/source/pages/icebreaker.html">Icebreaker</a></li>
+        <li><a href="/source/pages/goodwillers.html">Goodwillers</a></li>
+        <li><a href="/source/pages/cosmonaut.html">Cosmonaut</a></li>
+        <li><a href="/source/pages/tiger.html">Tiger</a></li>
+        <li><a href="/source/pages/olympics.html">Olympics</a></li>
+        <li><a href="/source/pages/mom.html">Mom</a></li>
+        <li><a href="/source/pages/planes.html">Planes</a></li>
+        <li><a href="/source/pages/fencing.html">Fencing</a></li>
+        <li><a href="/source/pages/sky.html">Sky</a></li>
+        <li><a href="/source/pages/artpark.html">Artpark</a></li>
+        <li><a href="/source/pages/rocket.html">Rocket</a></li>
+        <li><a href="/source/pages/leopard.html">Leopard</a></li>
+        <li><a href="/source/pages/aquarium.html">Aquarium</a></li>
+        <li><a href="/source/pages/ice.html">Ice</a></li>
+        <li><a href="/source/pages/quantum.html">Quantum</a></li>
+        <li><a href="/source/pages/football.html">Football</a></li>
+        <li><a href="/source/pages/cathedral.html">Cathedral</a></li>
+        <li><a href="/source/pages/bridge.html">Bridge</a></li>
+        <li><a href="/source/pages/teriberka.html">Teriberka</a></li>
+        <li><a href="/source/pages/circus.html">Circus</a></li>
+        <li><a href="/source/pages/bashmet.html">Bashmet</a></li>
+    </ul>
 </body>
-
 </html>
