--- a/source/pages/rocket.html
+++ b/source/pages/rocket.html
@@ -24,12 +24,12 @@
     </button>
   </div>
 
-  <a-scene mindar-image="imageTargetSrc: ./source/marker/lachta.mind;" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ../marker/lachta.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="./source/video/lachta.mp4">
+      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="../video/lachta.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
