--- a/source/pages/lachta.html
+++ b/source/pages/lachta.html
@@ -33,10 +33,10 @@
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
-        <source src="../sounds/ENGLISH/1.mp3" type="audio/mp3">
+        <source src="../sounds/ENGLISH/lachta.mp3" type="audio/mp3">
       </audio>
       <audio id="russianAudio" loop>
-        <source src="../sounds/RUSSIAN/1.mp3" type="audio/mp3">
+        <source src="../sounds/RUSSIAN/lachta.mp3" type="audio/mp3">
       </audio>
     </a-assets>
 
