--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -29,7 +29,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="../video/altai.mp4">
+      <video id="altai" autoplay loop muted crossorigin="anonymous" src="../video/altai.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
@@ -43,7 +43,7 @@
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse;"></a-camera>
 
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-video src="#lachta" width="1" height="0.75"></a-video>
+      <a-video src="#altai" width="1" height="0.75"></a-video>
     </a-entity>
 
     <!-- Добавлены компоненты raycaster и cursor -->
