--- a/source/pages/aquarium.html
+++ b/source/pages/aquarium.html
@@ -24,19 +24,19 @@
     </button>
   </div>
 
-  <a-scene mindar-image="imageTargetSrc: ../marker/lachta.mind;" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ../marker/aquarium.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="../video/lachta.mp4">
+      <video id="lachta" autoplay loop muted crossorigin="anonymous" src="../video/aquarium.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
-        <source src="../sounds/ENGLISH/1.mp3" type="audio/mp3">
+        <source src="../sounds/ENGLISH/aquarium.mp3" type="audio/mp3">
       </audio>
       <audio id="russianAudio" loop>
-        <source src="../sounds/RUSSIAN/1.mp3" type="audio/mp3">
+        <source src="../sounds/RUSSIAN/aquarium.mp3" type="audio/mp3">
       </audio>
     </a-assets>
 
