--- a/source/pages/circus.html
+++ b/source/pages/circus.html
@@ -23,26 +23,26 @@
     </button>
   </div>
 
-  <a-scene mindar-image="imageTargetSrc: ../marker/altai.mind;" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ../marker/circus.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="altai" autoplay loop muted crossorigin="anonymous" src="../video/altai.mp4">
+      <video id="circus" autoplay loop muted crossorigin="anonymous" src="../video/circus.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
-        <source src="../sounds/ENGLISH/altai.mp3" type="audio/mp3">
+        <source src="../sounds/ENGLISH/circus.mp3" type="audio/mp3">
       </audio>
       <audio id="russianAudio" loop>
-        <source src="../sounds/RUSSIAN/altai.mp3" type="audio/mp3">
+        <source src="../sounds/RUSSIAN/circus.mp3" type="audio/mp3">
       </audio>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse;"></a-camera>
 
     <a-entity mindar-image-target="targetIndex: 0">
-      <a-video src="#altai" width="1" height="0.75"></a-video>
+      <a-video src="#circus" width="1" height="0.75"></a-video>
     </a-entity>
 
     <!-- Добавлены компоненты raycaster и cursor -->
@@ -51,14 +51,6 @@
 
   <!-- Скрипт для обработки выбора языка и воспроизведения аудио -->
   <script src="../scriptAudio.js"></script>
-
-  <!-- Скрипт для автоматического воспроизведения видео -->
-  <script>
-    const video = document.getElementById('altai');
-    window.addEventListener('load', function() {
-      video.play();
-    });
-  </script>
 </body>
 
 </html>
