Изменила событие load

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -54,11 +54,12 @@
 
   <!-- Скрипт для автоматического воспроизведения видео -->
   <script>
-    const video = document.getElementById('altai');
-    window.addEventListener('load', function() {
+    document.addEventListener('DOMContentLoaded', function() {
+      const video = document.getElementById('altai');
       video.play();
     });
   </script>
+  
 </body>
 
 </html>
