Вернула все назад, видео перестало работать

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -12,13 +12,7 @@
       document.addEventListener('DOMContentLoaded', function() {
         const video = document.getElementById('altai');
         video.play();
-        video.muted = true; // Установка значения true для отключения звука видео
-    
-        // Воспроизведение аудио без привязки к видео
-        const englishAudio = document.getElementById('englishAudio');
-        const russianAudio = document.getElementById('russianAudio');
-        englishAudio.play();
-        russianAudio.play();
+        video.muted = true;
       });
     </script>
 </head>
