muted изменила на true

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -12,6 +12,7 @@
       document.addEventListener('DOMContentLoaded', function() {
         const video = document.getElementById('altai');
         video.play();
+        video.muted = true;
       });
     </script>
 </head>
