--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -9,7 +9,7 @@
 
     <!-- Скрипт для автоматического воспроизведения видео -->
     <script>
-      document.addEventListener('load', function() {
+      document.addEventListener('DOMContentLoaded', function() {
         const video = document.getElementById('altai');
         video.play();
         video.muted = true;
