--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -7,29 +7,47 @@
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <script src="https://cdn.rawgit.com/cozmo/jsQR/master/dist/jsQR.js"></script>
 
-    <!-- Скрипт для автоматического воспроизведения видео -->
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const video = document.getElementById('altai');
-        video.play();
-        video.muted = true;
-      });
-    </script>
+  <!-- Скрипт для автоматического воспроизведения видео -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const video = document.getElementById('altai');
+      video.play();
+      video.muted = true;
+    });
+  </script>
 </head>
 
 <body>
   <!-- Блок с кнопками и изображением -->
   <div id="button-container">
     <!-- Кнопка с изображением слева -->
-    <button id="englishButton" onclick="playAudio('english')">
-      <img src="../pictures/UK_flag.png" alt="English">
-      English
-    </button>
+    <img id="logo" src="../pictures/logo.png" alt="логотип">
+    <div id="button-wrapper">
 
-    <button id="russianButton" onclick="playAudio('russian')">
-      <img src="../pictures/russian_flag.jpg" alt="Русский">
-      Русский
-    </button>
+      <button class="language-button" id="russianButton" onclick="playAudio('russian')">
+        <img src="../pictures/russian_flag.jpg" alt="Русский">
+        <!-- Русский -->
+      </button>
+
+      <button class="language-button" id="englishButton" onclick="playAudio('english')">
+        <img src="../pictures/UK_flag.png" alt="English">
+        <!-- English -->
+      </button>
+
+    </div>
+
+    <div id="button-wrapper">
+      <button class="language-button" id="spanishButton" onclick="playAudio('spanish')">
+        <img src="../pictures/spanish_flag.png" alt="Spanish">
+        <!-- Spanish -->
+      </button>
+
+      <button class="language-button" id="arabicButton" onclick="playAudio('arabic')">
+        <img src="../pictures/arabic_flag.png" alt="Arabic">
+        <!-- Arabic -->
+      </button>
+
+    </div>
   </div>
 
   <a-scene mindar-image="imageTargetSrc: ../marker/altai.mind;" color-space="sRGB"
@@ -60,7 +78,7 @@
 
   <!-- Скрипт для обработки выбора языка и воспроизведения аудио -->
   <script src="../scriptAudio.js"></script>
-  
+
 </body>
 
 </html>
