заменила иконки, настроила языки

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -25,12 +25,12 @@
     <div id="button-wrapper">
 
       <button class="language-button" id="russianButton" onclick="playAudio('russian')">
-        <img src="../pictures/russian_flag.jpg" alt="Русский">
+        <img src="../pictures/russian_flag.png" alt="Русский">
         <!-- Русский -->
       </button>
 
       <button class="language-button" id="englishButton" onclick="playAudio('english')">
-        <img src="../pictures/UK_flag.png" alt="English">
+        <img src="../pictures/english_flag.png" alt="English">
         <!-- English -->
       </button>
 
@@ -63,6 +63,12 @@
       </audio>
       <audio id="russianAudio" loop>
         <source src="../sounds/RUSSIAN/altai.mp3" type="audio/mp3">
+      </audio>
+      <audio id="spanishAudio" loop>
+        <source src="../sounds/SPANISH/altai.mp3" type="audio/mp3">
+      </audio>
+      <audio id="arabicAudio" loop>
+        <source src="../sounds/ARABIC/altai.mp3" type="audio/mp3">
       </audio>
     </a-assets>
 
