--- a/source/pages/icebreaker.html
+++ b/source/pages/icebreaker.html
@@ -12,15 +12,27 @@
   <!-- Блок с кнопками и изображением -->
   <div id="button-container">
     <!-- Кнопка с изображением слева -->
-    <button id="englishButton" onclick="playAudio('english')">
-      <img src="../pictures/UK_flag.png" alt="English">
-      English
-    </button>
-
-    <button id="russianButton" onclick="playAudio('russian')">
-      <img src="../pictures/russian_flag.jpg" alt="Русский">
-      Русский
-    </button>
+    <img id="logo" src="../pictures/logo.png" alt="логотип">
+    <div id="button-wrapper">
+      <button class="language-button" id="russianButton" onclick="playAudio('russian')">
+        <img src="../pictures/russian_flag.png" alt="Русский">
+        <!-- Русский -->
+      </button>
+      <button class="language-button" id="englishButton" onclick="playAudio('english')">
+        <img src="../pictures/english_flag.png" alt="English">
+        <!-- English -->
+      </button>
+    </div>
+    <div id="button-wrapper">
+      <button class="language-button" id="spanishButton" onclick="playAudio('spanish')">
+        <img src="../pictures/spanish_flag.png" alt="Spanish">
+        <!-- Spanish -->
+      </button>
+      <button class="language-button" id="arabicButton" onclick="playAudio('arabic')">
+        <img src="../pictures/arabic_flag.png" alt="Arabic">
+        <!-- Arabic -->
+      </button>
+    </div>
   </div>
 
   <a-scene mindar-image="imageTargetSrc: ../marker/icebreaker.mind;" color-space="sRGB"
@@ -36,6 +48,12 @@
       </audio>
       <audio id="russianAudio" loop>
         <source src="../sounds/RUSSIAN/icebreaker.mp3" type="audio/mp3">
+      </audio>
+      <audio id="spanishAudio" loop>
+        <source src="../sounds/SPANISH/icebreaker.mp3" type="audio/mp3">
+      </audio>
+      <audio id="arabicAudio" loop>
+        <source src="../sounds/ARABIC/icebreaker.mp3" type="audio/mp3">
       </audio>
     </a-assets>
 
