добавила назад скрипт с аудио

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -68,7 +68,7 @@
   </a-scene>
 
   <!-- Скрипт для обработки выбора языка и воспроизведения аудио -->
-  <!-- <script src="../scriptAudio.js"></script> -->
+  <script src="../scriptAudio.js"></script>
   <!-- Скрипт для автоматического воспроизведения видео -->
   <script>
     document.addEventListener('load', function () {
