попробую снова убрать loud

--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -71,7 +71,7 @@
   <script src="../scriptAudio.js"></script>
   <!-- Скрипт для автоматического воспроизведения видео -->
   <script>
-    document.addEventListener('load', function () {
+    document.addEventListener('DOMContentLoaded', function () {
       const video = document.getElementById('altai');
       video.play();
       video.muted = true;
