--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -7,14 +7,14 @@
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <script src="https://cdn.rawgit.com/cozmo/jsQR/master/dist/jsQR.js"></script>
 
-  <!-- Скрипт для автоматического воспроизведения видео -->
+  <!-- Скрипт для автоматического воспроизведения видео
   <script>
     const video = document.getElementById('altai');
     window.addEventListener('load', function () {
       video.play();
       video.muted = true;
     });
-  </script>
+  </script> -->
 </head>
 
 <body>
