--- a/source/pages/altai.html
+++ b/source/pages/altai.html
@@ -49,7 +49,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="altai" autoplay loop muted crossorigin="anonymous" src="../video/altai.mp4">
+      <video id="altai" loop muted crossorigin="anonymous" src="../video/altai.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
