--- a/source/pages/bashmet.html
+++ b/source/pages/bashmet.html
@@ -40,7 +40,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="bashmet" autoplay loop muted crossorigin="anonymous" src="../video/bashmet.mp4">
+      <video id="video" autoplay loop muted crossorigin="anonymous" src="../video/bashmet.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
