--- a/source/pages/innopolis.html
+++ b/source/pages/innopolis.html
@@ -40,7 +40,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <video id="innopolis" autoplay loop muted crossorigin="anonymous" src="../video/innopolis.mp4">
+      <video id="video" autoplay loop muted crossorigin="anonymous" src="../video/innopolis.mp4">
       </video>
       <!-- Аудио-ресурсы для разных языков -->
       <audio id="englishAudio" loop>
