--- a/source/pages/bashmet.html
+++ b/source/pages/bashmet.html
@@ -13,7 +13,7 @@
   <!-- Блок с кнопками и изображением -->
   <div id="button-container">
     <!-- Кнопка с изображением слева -->
-    <img id="logo" src="../pictures/logo.png" alt="логотип">
+    <img id="logo" src="../pictures/logo.jpg" alt="логотип">
     <div id="button-wrapper">
       <button class="language-button" id="russianButton" onclick="playAudio('russian')">
         <img src="../pictures/russian_flag.png" alt="Русский">
